// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert renders variant 'danger' correctly 1`] = `
<div
  class="alert alertDanger"
>
  <h4>
    Too many matching repositories
  </h4>
  Use a 'repo:' or 'repogroup:' filter to narrow your search.
</div>
`;

exports[`Alert renders variant 'info' correctly 1`] = `
<div
  class="alert alertInfo"
>
  <h4>
    Too many matching repositories
  </h4>
  Use a 'repo:' or 'repogroup:' filter to narrow your search.
</div>
`;

exports[`Alert renders variant 'merged' correctly 1`] = `
<div
  class="alert alertMerged"
>
  <h4>
    Too many matching repositories
  </h4>
  Use a 'repo:' or 'repogroup:' filter to narrow your search.
</div>
`;

exports[`Alert renders variant 'primary' correctly 1`] = `
<div
  class="alert alertPrimary"
>
  <h4>
    Too many matching repositories
  </h4>
  Use a 'repo:' or 'repogroup:' filter to narrow your search.
</div>
`;

exports[`Alert renders variant 'secondary' correctly 1`] = `
<div
  class="alert alertSecondary"
>
  <h4>
    Too many matching repositories
  </h4>
  Use a 'repo:' or 'repogroup:' filter to narrow your search.
</div>
`;

exports[`Alert renders variant 'success' correctly 1`] = `
<div
  class="alert alertSuccess"
>
  <h4>
    Too many matching repositories
  </h4>
  Use a 'repo:' or 'repogroup:' filter to narrow your search.
</div>
`;

exports[`Alert renders variant 'warning' correctly 1`] = `
<div
  class="alert alertWarning"
>
  <h4>
    Too many matching repositories
  </h4>
  Use a 'repo:' or 'repogroup:' filter to narrow your search.
</div>
`;
